--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go LATEST
-      run: |
-        curl -quiet -fsSL https://raw.githubusercontent.com/capric98/myenv/master/Go/Linux/install.sh | bash
-        source ~/.bashrc
+    - name: Set up Go
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.14.2
+      id: go
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
