--- a/.github/workflows/attachBuilds.yml
+++ b/.github/workflows/attachBuilds.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Go LATEST
-        run: |
-          curl -quiet -fsSL https://raw.githubusercontent.com/capric98/myenv/master/Go/Linux/install.sh | bash
-          source ~/.bashrc
-          apt install zip
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.13
+        id: go
 
       - name: Build
         env:
