--- a/.github/workflows/attachBuilds.yml
+++ b/.github/workflows/attachBuilds.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Go LATEST
+      - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: 1.13
+          go-version: 1.14.2
         id: go
 
       - name: Build
