--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,11 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go
-      uses: actions/setup-go@v1
-      with:
-        go-version: 1.14.2
-      id: go
+    - name: Set up Go LATEST
+      run: |
+        sudo curl -fsSL https://raw.githubusercontent.com/capric98/myenv/master/Go/Linux/install.sh | bash
+        source ~/.bashrc
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
