--- a/.github/workflows/attachBuilds.yml
+++ b/.github/workflows/attachBuilds.yml
@@ -10,11 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.14.2
-        id: go
+      - name: Set up Go LATEST
+        run: |
+          curl -fsSL https://raw.githubusercontent.com/capric98/myenv/master/Go/Linux/install.sh | bash
+          source ~/.bashrc
 
       - name: Build
         env:
