--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,9 @@ jobs:
     - name: Set up Go LATEST
       run: |
         curl -fsSL https://raw.githubusercontent.com/capric98/myenv/master/Go/Linux/install.sh | bash
-        source ~/.bashrc
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
     - name: Test
-      run: go test ./...
+      run: /usr/local/go/bin/go test ./...
